--- a/styles/news.css
+++ b/styles/news.css
@@ -1,3 +1,24 @@
+header {
+    height: 200px;
+    width: 80%;
+    background-color: #dfdfdf;
+    background-image: url('../images/image.png');
+    /* background-repeat: no-repeat; */
+    /* background-repeat: repeat-y; */
+    /* background-size: 200px; */
+    /* background-size: contain; */
+    /* background-size: auto; */
+    /* background-size: cover; */
+    background-size: 150px 70px;
+    background-repeat: no-repeat;
+    background-position: 98% 10% ;
+    border: 1px solid #200044;
+    border-radius: 15px;
+    margin: 20px;
+    padding: 50px;
+
+}
+
 div {
     background-color: #d3d1d1;
     padding: 20px;
@@ -25,4 +46,13 @@ h2 {
     color: #200044;
     font-size: 24px;
     text-align: center;
+}
+
+.block {
+    border: 5px solid #200044;
+    height: 70px;
+    width: 250px;
+    text-align: center;
+    /* display: block; */
+    display: inline-block;
 }
