--- a/simple-responsive-challenges/Challenge-Begins/styles.css
+++ b/simple-responsive-challenges/Challenge-Begins/styles.css
@@ -39,10 +39,26 @@
     cursor: pointer;
 }
 
+.content-title {
+   color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left; 
+}
+
+.section-text {
+    padding: 0 150px;
+}
+
 /* Header and Hero Section */
 
 nav {
-    padding: 20px 150px;
+    /* padding: 20px 150px; */
+    max-width: 1440px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -65,4 +81,268 @@ nav {
 .hero img {
     max-width: 200px;
     max-height: 200px;
+}
+
+.learn-more{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+}
+
+/* Main Section */
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* web-development */
+
+#web-development {
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    padding: 80px 95px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#web-development .codding, .web {
+    padding: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    border-radius: 16px;
+    gap: 100px;
+    width: 100%;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+
+/* #web-development .left-side {
+    max-width: 477px;
+    padding: 115px 150px  115px 150px ;
+} */
+
+#web-development .left-side .feature-description {
+    text-align: left;
+}
+
+#web-development img {
+    max-width: 100%;
+    height: auto;
+
+}
+
+#web-development .web {
+    background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+
+/* my-inspiration */
+
+#my-inspiration {
+    margin: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+#my-inspiration .inspiration-video {
+    width: 100%;
+    height: 614px;;
+    border-radius: 16px;
+    margin-top: 20px;
+}
+
+/* my current target */
+
+#current-target {
+    margin: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#current-target .technologies{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+#current-target .technology {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 40px;
+    border-radius: 16px;
+    background: rgba(255, 76, 30, 0.05);
+    
+}
+
+#current-target .technology img {
+    max-width: 56px;
+    max-height: 56px;
+}
+#current-target .content-title{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;    
+}
+
+#current-target .feature-description, #current-target .feature-title {
+    text-align: left;
+}
+
+
+/* my-next-target */
+
+#my-next-target {
+    margin: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+#my-next-target .targets{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+    width: 100%;
+    
+}
+
+#my-next-target .target {
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    justify-content: flex-start;
+    border-radius: 16px;
+    padding: 40px;
+    width: 100%;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    
+}
+
+/* #my-next-target .target-image-container{
+    padding: 20px;
+} */
+
+#my-next-target .target img {
+    max-width: 143.3px;
+    max-height: 87px;
+}
+
+/* #my-next-target .target-text-container{
+    display: flex;
+    flex-direction: column;
+} */
+
+/* News letter */
+
+#newsletter {
+    margin: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 64px 48px 64px 48px;
+    border-radius: 16px;
+    background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2);
+    background-image: url(./assets/handshake.jpg);
+    border-radius: 16px;
+
+}
+
+#newsletter .newsletter-container{
+    margin: 32px 0px;
+}
+
+#newsletter .form{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#newsletter .form input[type="email"] {
+    padding: 16px 24px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    color: rgba(13, 19, 33, 0.4);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+#newsletter .form .primary-button{
+    border: none;
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+/* Footer */
+
+.footer {
+    
+    background: rgba(13, 19, 33, 0.03);
+}
+
+footer .footer-container {
+    padding: 25px 0;
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .footer-text {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.footer .social-icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+    gap: 20px;
 }
