--- a/influencer-gear/styles.css
+++ b/influencer-gear/styles.css
@@ -86,7 +86,6 @@ i:hover {
 
 header {
     max-width: 1440px;
-    width: 100%;
     margin: 0 auto;
 }
 
@@ -164,10 +163,15 @@ main {
 
 /* Brand Images Section Styles */
 
-.brand-imgs {
+.brands {
     width: 100%;
+    margin: auto;
+}
+
+.brand-imgs {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
     margin: 100px 50px 0 50px ;
@@ -176,6 +180,7 @@ main {
 }
 
 .brand-imgs img {
+    width: 100px;
     padding: 20px;
 }
 
@@ -298,7 +303,6 @@ main {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     justify-content: space-between;
-    
     gap: 100px;
 }
 
@@ -378,4 +382,172 @@ footer .social-icons i {
     font-size: 24px;
     cursor: pointer;
     transition: color 0.3s ease;
+}
+
+/* Responsive Styles  for small devices*/
+
+@media screen and (max-width: 576px){
+    header nav {
+        /* flex-direction: ; */
+        max-width: 576px;
+        margin: 0 auto;
+    }
+
+    header nav ul li{
+        display: none;
+    }
+
+    header nav ul li:last-child {
+        display: block !important;
+    }
+
+    .hero {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 50px;
+    }
+
+    .hero .right-side img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    main {
+        max-width: 576px;
+    }
+
+    .brands {
+        width: 100%;
+    }
+
+    .brands .brand-imgs {
+        margin: 50px 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .brands.brand-imgs img {
+        padding: 10px;
+    }
+
+    .collection-items {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+
+    .featured-products {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-bottom: 50px;
+    }
+
+    .featured-products .left-side img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .featured-products .right-side {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-image: none;
+        height: auto;
+    }
+
+    .footer {
+        margin-top: 50px;
+    }
+}
+
+/* Responsive Styles for medium devices */
+
+@media screen and (min-width: 576px) and (max-width: 768px){
+    
+    /* html, body {
+    overflow-x: hidden;
+    } */
+
+    header nav {
+        /* flex-direction: ; */
+        max-width: 768px;
+        margin: 0 auto;
+    }
+
+    header nav {
+        width: 100%;
+    }
+
+    header nav ul li{
+        display: none;
+    }
+
+    header nav ul li:nth-last-child(-n+2) {
+        display: block !important;
+    }
+
+    .hero {
+        max-width: 100%;
+        margin: 0 auto;
+        grid-template-columns: repeat(2, 1fr);
+        text-align: start;
+        gap: 50px;
+    }
+
+    .hero .right-side img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    main {
+        max-width: 100%;
+    }
+
+    .brand-imgs {
+        width: 100%;
+        margin: 50px auto;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .brand-imgs img {
+        padding: 10px;
+    }
+
+    .collection-items {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+
+    .featured-products {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-bottom: 50px;
+    }
+
+    .featured-products .left-side img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .featured-products .right-side {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-image: none;
+        height: auto;
+    }
+
+    .footer {
+        margin-top: 50px;
+    }
+
 }
