--- a/fitness-versatile-ui/styles.css
+++ b/fitness-versatile-ui/styles.css
@@ -123,6 +123,27 @@ header {
     background: var(--secondary-color);
 }
 
+.section-title {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;    
+}
+
+
+.section-desc {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;    
+}
+
 /* Hero section */
 
 .hero-container {
@@ -249,31 +270,20 @@ header {
     align-items: center;
 }
 
-#change-habit .section-title {
-    color: rgb(255, 255, 255);
-    font-family: Inter;
-    font-size: 48px;
-    font-weight: 900;
-    line-height: 120%;
-    letter-spacing: 0%;
-    text-align: left;    
-}
-
-#change-habit .section-desc {
-    color: rgba(255, 255, 255, 0.5);
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.3px;
-    text-align: center;    
-}
 
 #change-habit .habit-cards{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    align-items: center;
     gap: 20px;
     margin-top: 50px;
+}
+
+#change-habit .habit-card {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .habit-card .habit-img img{
@@ -290,10 +300,12 @@ header {
     font-weight: 600;
     line-height: 120%;
     letter-spacing: 0%;
-    text-align: left;
+    text-align: center;
+    margin-top: -40px;
 }
 
 .habit-card .habit-desc {
+    margin-top: 10px;
     color: rgba(255, 255, 255, 0.5);
     font-family: Inter;
     font-size: 14px;
@@ -303,6 +315,47 @@ header {
     text-align: center;
 }
 
+
+/* run-extra  section*/
+
+#run-extra {
+    padding: 20px;
+    max-width: 1440px;
+    margin: 100px auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+    border-radius: 18px;
+    background: rgb(34, 34, 34);
+}
+
+#run-extra .left-side {
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: 20px;
+}
+
+.section-desc{
+    text-align: start;
+}
+
+#run-extra .right-side {
+
+    padding: 40px;
+}
+
+#run-extra .right-side img {
+    width: 100%;
+    height: auto;
+    border-radius: 40px;
+    
+}
 
 
 
